Stupid FF overflow fix

--- a/layout.src.css
+++ b/layout.src.css
@@ -58,7 +58,7 @@ label {
 
 .slider-row {
 	width: 100%;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .checkbox-row {
